--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -9,12 +9,41 @@
   </head>
   <body>
     <!-- Background Classes -->
+		<div class="h-64 w-72 bg-no-repeat bg-cover bg-center"
+			style="background-image: url('../assets/img/img1.jpg');"
+		></div>
 
     <!-- Gradients -->
+		<div class="h-24 bg-gradient-to-r from-cyan-500 to-blue-500"></div>
 
     <!-- Shadows -->
+		<div class="w-96 mt-6 ml-4 p-3 shadow shadow-blue-500/50">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt similique repellat ut. Laborum consequuntur architecto eligendi quaerat debitis odit officiis neque et omnis, facilis quo ea tempora vero nulla dolor?
+		</div>
+		<div class="w-96 mt-6 ml-4 p-3 shadow-inner">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt similique repellat ut. Laborum consequuntur architecto eligendi quaerat debitis odit officiis neque et omnis, facilis quo ea tempora vero nulla dolor?
+		</div>
+		<div class="w-96 mt-6 ml-4 p-3 shadow-sm">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt similique repellat ut. Laborum consequuntur architecto eligendi quaerat debitis odit officiis neque et omnis, facilis quo ea tempora vero nulla dolor?
+		</div>
+		<div class="w-96 mt-6 ml-4 p-3 shadow-md">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt similique repellat ut. Laborum consequuntur architecto eligendi quaerat debitis odit officiis neque et omnis, facilis quo ea tempora vero nulla dolor?
+		</div>
+		<div class="w-96 mt-6 ml-4 p-3 shadow-lg">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt similique repellat ut. Laborum consequuntur architecto eligendi quaerat debitis odit officiis neque et omnis, facilis quo ea tempora vero nulla dolor?
+		</div>
+		<div class="w-96 mt-6 ml-4 p-3 shadow-xl">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt similique repellat ut. Laborum consequuntur architecto eligendi quaerat debitis odit officiis neque et omnis, facilis quo ea tempora vero nulla dolor?
+		</div>
+		<div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-red-500">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt similique repellat ut. Laborum consequuntur architecto eligendi quaerat debitis odit officiis neque et omnis, facilis quo ea tempora vero nulla dolor?
+		</div>
 
     <!-- Mix Blend -->
+		<div class="flex justify-center -space-x-24">
+			<div class="mix-blend-multiply bg-blue-400">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi sunt, ea nihil doloremque rerum aliquid obcaecati rem. At, quas ab.</div>
+			<div class="mix-blend-multiply bg-pink-400">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, vero ipsam! Saepe dignissimos ducimus, consequuntur minus odit adipisci fuga odio!</div>
+		</div>
   </body>
 </html>
 
