--- a/09-filters/index.html
+++ b/09-filters/index.html
@@ -9,16 +9,38 @@
   </head>
   <body>
     <!-- Blur -->
+		<div class="blur-sm">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolorem similique alias facilis corporis iusto libero sunt ad iure laudantium.
+		</div>
+		<div class="blur">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta dolorem similique alias facilis corporis iusto libero sunt ad iure laudantium.
+		</div>
+		<img class="blur-xl" src="../assets/img/img1.jpg" alt="">
+    <!-- Contrast and brightness-->
+		<img class="brightness-50" src="../assets/img/img2.jpg" alt="">
+		<img class="brightness-75" src="../assets/img/img2.jpg" alt="">
+		<img class="brightness-110" src="../assets/img/img2.jpg" alt="">
+		<img class="brightness-150" src="../assets/img/img2.jpg" alt="">
 
-    <!-- Contrast -->
+		<img class="contrast-50" src="../assets/img/img3.jpg" alt="">
+		<img class="contrast-75" src="../assets/img/img3.jpg" alt="">
+		<img class="contrast-110" src="../assets/img/img3.jpg" alt="">
+		<img class="contrast-150" src="../assets/img/img3.jpg" alt="">
 
     <!-- Grayscale -->
+		<img class="grayscale" src="../assets/img/img4.jpg" alt="">
 
     <!-- Invert -->
+		<img class="invert" src="../assets/img/img5.jpg" alt="">
 
     <!-- Sepia -->
+		<img class="sepia" src="../assets/img/img6.jpg" alt="">
 
     <!-- Hue Rotate -->
+		<img class="hue-rotate-15" src="../assets/img/img7.jpg" alt="">
+		<img class="hue-rotate-60" src="../assets/img/img7.jpg" alt="">
+		<img class="hue-rotate-90" src="../assets/img/img7.jpg" alt="">
+		<img class="hue-rotate-180" src="../assets/img/img7.jpg" alt="">
   </body>
 </html>
 
