--- a/10-interactivity/index.html
+++ b/10-interactivity/index.html
@@ -9,25 +9,56 @@
   </head>
   <body>
     <!-- Hover State Styling -->
+		<button class="bg-black text-white py-3 px-5 rounded-lg m-3 hover:bg-orange-500 hover:text-white">Submit</button>
 
     <!-- Focus State Styling -->
+		<button class="bg-black text-white py-3 px-5 rounded-lg m-3 focus:bg-green-500 focus:text-white">Submit</button>
 
     <!-- Active State Styling -->
+		<button class="bg-black text-white py-3 px-5 rounded-lg m-3 active:bg-yellow-500 active:text-white">Submit</button>
 
     <!-- Styling based on parent state -->
+		<a href="" class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-3 hover:bg-sky-500">
+			<h3 class="group-hover:text-white">Card Title</h3>
+			<p class="group-hover:text-white">This is the card text</p>
+		</a>
 
     <!-- Pseudo Classes -->
+		<ul>
+			<li class="even:bg-green-500 odd:bg-orange-500 first:bg-red-200">Item 1</li>
+			<li class="even:bg-green-500 odd:bg-orange-500 first:bg-red-200">Item 2</li>
+			<li class="even:bg-green-500 odd:bg-orange-500 first:bg-red-200">Item 3</li>
+			<li class="even:bg-green-500 odd:bg-orange-500 first:bg-red-200">Item 4</li>
+			<li class="even:bg-green-500 odd:bg-orange-500 first:bg-red-200">Item 5</li>
+			<li class="even:bg-green-500 odd:bg-orange-500 first:bg-red-200">Item 6</li>
+		</ul>
 
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
+		<select class="appearance-none">
+			<option value="yes">Yes</option>
+			<option value="no">No</option>
+		</select>
+
+		<br>
 
     <!-- Cursor -->
+		<p class="cursor-pointer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas sequi repellendus amet eos dolorem, officiis at tempore cum! Officiis voluptatum hic tempore reiciendis cum tempora inventore dolorum voluptatem cumque ducimus?</p>
+		<button class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-wait">Submit</button>
+		<button class="bg-black text-white py-3 px-5 rounded-lg m-3 cursor-not-allowed">Submit</button>
 
     <!-- Resize -->
 
     <!-- User Select -->
+		<div class="select-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quas quos quae ad consectetur dolor perspiciatis harum sequi hic tenetur.</div>
+		<div class="select-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quas quos quae ad consectetur dolor perspiciatis harum sequi hic tenetur.</div>
+		<div class="select-all">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quas quos quae ad consectetur dolor perspiciatis harum sequi hic tenetur.</div>
+		<div class="select-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quas quos quae ad consectetur dolor perspiciatis harum sequi hic tenetur.</div>
+
+		<a href="#item" class="block my-6">Go To Item</a>
 
     <!-- Smooth Scroll Example -->
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime pariatur rem voluptas? Amet aperiam eaque fuga maxime cumque sequi vero aspernatur animi rerum distinctio nemo hic voluptates illo facere, ut minus deserunt saepe debitis quis nam iure tempore vitae! Eum magni, consequuntur laborum quasi temporibus officia adipisci. Aliquam sed aspernatur sapiente dicta ea tempora aliquid deleniti iusto sint accusamus quibusdam mollitia dolore, iste necessitatibus molestiae, odit ut odio veniam dolorem magni voluptate perferendis. Tempore quidem tenetur totam voluptate maxime facere corrupti voluptatum eos, cumque nesciunt vero aperiam. Minus quasi eos officiis placeat velit quas! Libero, impedit. Sequi voluptas consequatur beatae repellendus veniam nulla voluptates culpa ea, nisi non dolores quasi optio vel cupiditate architecto perspiciatis fugiat iste quae recusandae in deleniti? Illo possimus cupiditate excepturi accusantium fugiat ipsam dolor odit consectetur inventore, nihil praesentium dicta? Nihil alias itaque ducimus. Odio aliquam magni sed deleniti voluptatem consequuntur veritatis explicabo nemo aliquid adipisci delectus provident libero architecto praesentium, maxime natus eligendi ipsam consectetur tempore pariatur eius optio? Animi incidunt suscipit explicabo error quasi magni omnis? Natus modi fugit eligendi nostrum sunt placeat delectus ad magnam incidunt perspiciatis eaque harum alias quidem facere nam porro quia necessitatibus, a laboriosam animi. Voluptas ducimus recusandae itaque autem culpa fugit explicabo et libero id repellat reprehenderit animi accusantium quidem consequatur, iure veniam laboriosam possimus, enim debitis asperiores earum? Sed molestiae praesentium obcaecati. Corporis commodi veritatis ducimus repellendus, voluptatem deserunt. Aliquam quaerat doloremque eveniet doloribus sint voluptate commodi rem odio. Voluptatibus odit incidunt id harum quo deleniti tenetur, pariatur esse, sint sapiente fugiat vel! Eum dolorum quam dignissimos! Culpa ex aut, veniam doloribus impedit magnam ab in corporis sequi recusandae officiis? Dignissimos recusandae libero quisquam voluptatibus, provident possimus nemo accusantium iure nulla ullam illo quidem qui iusto necessitatibus ducimus molestiae inventore consequuntur doloribus tempore. Aliquam enim, quod, facilis sit optio a pariatur nam consequatur dolor nostrum similique porro eius impedit aperiam. Nisi corporis quod fugiat dolore reiciendis ipsam magni error, vero officiis pariatur illum culpa fugit quaerat veniam! Maxime, rerum impedit quasi, perferendis blanditiis distinctio vel modi eligendi delectus sapiente eos. Numquam totam aliquid, nesciunt dolor inventore dolore, quam, rerum doloribus facere quas nostrum voluptate earum reiciendis deserunt. Mollitia, perspiciatis explicabo ex reprehenderit voluptates assumenda vel eos culpa cumque ullam doloremque illo deserunt officia vero itaque ducimus tenetur. Dolorum earum eligendi est quaerat fugit fuga repellat dolorem, illo modi corrupti consequuntur necessitatibus veritatis quo at fugiat iusto!</p><div id="item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam beatae minus fuga dolores accusantium explicabo aperiam officia, numquam quasi quibusdam quia totam modi ipsa quidem vel impedit! Corporis ipsa blanditiis, hic non molestiae fuga quidem harum animi totam accusantium! Mollitia veritatis pariatur commodi. Itaque voluptatem laborum omnis natus nemo voluptates!</div>
   </body>
 </html>
 
