--- a/11-breakpoints/index.html
+++ b/11-breakpoints/index.html
@@ -8,7 +8,19 @@
     <title>Breakpoints & Media Queries</title>
   </head>
   <!-- Tailwind is mobile-first -->
-  <body></body>
+	<h1 class="text-white text-xl md:text-3xl"></h1>
+  <body class="bg-black sm:bg-green-800 md:bg-yellow-800 lg:bg-purple-800 xl:bg-blue-800 2xl:bg-orange-800">
+		<script>
+			function showBrowserWidth(){
+				const width = window.innerWidth;
+
+				document.querySelector('h1').innerText = `Width: ${width}px`;
+			}
+
+			window.onload = showBrowserWidth;
+			window.onresize = showBrowserWidth;
+		</script>
+	</body>
 </html>
 
 <!-- Breakpoint Classes
